<resources>
    <string name="app_name">Retrofit Demo</string>
    <string name="action_settings">Settings</string>

    <string name="create_new_profile">Create New Profile</string>
    <string name="new_profile_name">Name</string>
    <string name="new_profile_phone">Contact No.</string>
    <string name="new_profile_email">Email Address</string>
    <string name="submit">Submit</string>
</resources>
